Backgorund overflow problem solved

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
 body{
   min-height: 100vh;
-  
+  background-color: hsl(230, 17%, 14%)!important;
 }
